--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<script src='https://unpkg.com/konva@8.3.0/konva.min.js'></script>
 
 	<script defer src='/build/bundle.js'></script>
 </head>
