--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
-	<title>Svelte app</title>
-
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
-	<script src='https://unpkg.com/konva@8.3.0/konva.min.js'></script>
-
-	<script defer src='/build/bundle.js'></script>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width,initial-scale=1'>
+  <title>Forzaboard</title>
+  <link rel='icon' type='image/png' href='/favicon.png'>
+  <link rel='stylesheet' href='/global.css'>
+  <link rel='stylesheet' href='/bundle/bundle-5452cde0.css'>
+  <script src='https://unpkg.com/konva@8.3.0/konva.min.js'></script>
+  <script defer src='/bundle/main-90cd5de8.js'></script>
 </head>
-
 <body>
 </body>
 </html>
