Add editing behind auth and use the permissions in the JWT to display edit mode. Procrastinate cleaning up the canvas interactions in the main App.svelte till next time.

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
   <title>Forzaboard</title>
   <link rel='icon' type='image/png' href='/favicon.png'>
   <link rel='stylesheet' href='/global.css'>
-  <link rel='stylesheet' href='/bundle/bundle-5452cde0.css'>
+  <link rel='stylesheet' href='/bundle/bundle.css'>
   <script src='https://unpkg.com/konva@8.3.0/konva.min.js'></script>
-  <script defer src='/bundle/main-90cd5de8.js'></script>
+  <script defer src='/bundle/main.js'></script>
 </head>
 <body>
 </body>
